Сбор UID'ов для подписки на получение измерений